# tinyerr

./: README.md  pyproject.toml
src/tinyerr/: __init__.py  __main__.py  anchor.py  config.py  errors.py  exechook.py  frames.py
src/tinyerr/trace/: __init__.py  last_traceback  trace.py
