[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyerr"
version = "0.0.1-alpha.2"
description = "Tiny Errors that remove the clutter"

readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[project.urls]
repository = "https://github.com/James-Ansley/tinyerr"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
tinyerr = "tinyerr:__main__"
